syntax = "proto3";
package user;
option go_package = "github.com/choi-yh/example-golang/protos/user";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service UserService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {
    option (google.api.http) = {
      post: "/v1/user/signup"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }
}

// model
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string phone = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
message UserPassword {
  string id = 1;
  string user_id = 2;
  string password = 3;
}

message SignUpRequest{
  string email = 1;
  string password = 2;
  string name = 3;
  string phone = 4;
}
message SignUpResponse{
  User user = 1;
}

message LoginRequest {}
message LoginResponse {}